force-app/main/default/objects/custom_create306__c/custom_create306__c.object-meta.xml
<CustomObject>
    <label>Custom created object306</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects306</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>