force-app/main/default/objects/custom_create306__c/fields/custom_create_306field687__c.field-meta.xml
<CustomField>
    <fullName>custom_create_306field687__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 306field687</label>
    <type>Checkbox</type>
</CustomField>